--- a/Code/GUI/collector/EditDeleteReadings.form
+++ b/Code/GUI/collector/EditDeleteReadings.form
@@ -24,14 +24,6 @@
           <text value="Date:"/>
         </properties>
       </component>
-      <component id="9386" class="javax.swing.JTextField" binding="dateField">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="18558" class="javax.swing.JTextField" binding="readingField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -74,6 +66,14 @@
         </constraints>
         <properties>
           <text value="Edit"/>
+        </properties>
+      </component>
+      <component id="5935f" class="javax.swing.JLabel" binding="dateLabel">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Label"/>
         </properties>
       </component>
     </children>
