--- a/Code/GUI/admin/UserSearchPanel.form
+++ b/Code/GUI/admin/UserSearchPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.athlete.AthleteSearchPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.admin.UserSearchPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="2" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="832" height="320"/>
+      <xy x="20" y="20" width="832" height="508"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -21,7 +21,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Search for athlete, country or sport"/>
+          <text value="Search for users of the system"/>
         </properties>
       </component>
       <scrollpane id="17334" binding="scrollPane">
@@ -37,7 +37,7 @@
           </component>
         </children>
       </scrollpane>
-      <grid id="836f" binding="checkBoxPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="836f" binding="checkBoxPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -45,45 +45,36 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9d94e" class="javax.swing.JCheckBox" binding="nameCheckBox">
+          <component id="9d94e" class="javax.swing.JCheckBox" binding="usernameCheckBox">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="true"/>
+              <text value="Username"/>
+            </properties>
+          </component>
+          <component id="af6b" class="javax.swing.JCheckBox" binding="nameCheckBox">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <selected value="true"/>
               <text value="Name"/>
             </properties>
           </component>
-          <component id="af6b" class="javax.swing.JCheckBox" binding="countryCheckBox">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <selected value="true"/>
-              <text value="Country"/>
-            </properties>
-          </component>
-          <component id="cb34e" class="javax.swing.JCheckBox" binding="sportCheckBox">
+          <component id="cb34e" class="javax.swing.JCheckBox" binding="telephoneCheckBox">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <selected value="true"/>
-              <text value="Sport"/>
-            </properties>
-          </component>
-          <component id="616b7" class="javax.swing.JCheckBox" binding="athleteIDCheckBox">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <selected value="true"/>
-              <text value="AthleteID"/>
+              <text value="Telephone"/>
             </properties>
           </component>
           <vspacer id="d2c6f">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
         </children>
