--- a/Code/GUI/analyst/AthletePageAnalyst.form
+++ b/Code/GUI/analyst/AthletePageAnalyst.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="15" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1281" height="712"/>
+      <xy x="20" y="20" width="1348" height="712"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -143,7 +143,7 @@
               <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Courier New" size="20" style="1"/>
+              <font name="Segoe UI" size="18" style="1"/>
               <text value="All locations"/>
             </properties>
           </component>
@@ -188,7 +188,7 @@
               <grid row="6" column="4" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Courier New" size="20" style="1"/>
+              <font name="Segoe UI" size="18" style="1"/>
               <text value="All readings"/>
             </properties>
           </component>
