--- a/Code/GUI/collector/AthletePageCollector.form
+++ b/Code/GUI/collector/AthletePageCollector.form
@@ -192,7 +192,7 @@
               <grid row="7" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Courier New" size="20" style="1"/>
+              <font name="Segoe UI" size="18" style="1"/>
               <text value="All locations"/>
             </properties>
           </component>
@@ -201,7 +201,7 @@
               <grid row="7" column="4" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Courier New" size="20" style="1"/>
+              <font name="Segoe UI" size="18" style="1"/>
               <text value="All haemoglobin levels added by you"/>
             </properties>
           </component>
