--- a/Code/GUI/admin/AddUser.form
+++ b/Code/GUI/admin/AddUser.form
@@ -155,7 +155,7 @@
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Courier New" size="20"/>
+              <font size="20"/>
               <text value="Add a new user to the system"/>
             </properties>
           </component>
