--- a/HHManager/src/main/webapp/CSS/logginn.css
+++ b/HHManager/src/main/webapp/CSS/logginn.css
@@ -1,6 +1,9 @@
 #halvesiden {
+    display: flex;
+    flex-direction: column;
+    padding-left:400px;
     width: 100px;
-    margin-top: 10px;
+    margin-top: 100px;
     margin-bottom: 10px;
 }
 #bestille{
@@ -8,7 +11,10 @@
     margin-top: 10px;
 }
 #siden{
-    width:150px;
-    margin-top:1000px;
-    margin-left: 100px;
+    display: flex;
+    flex-direction: column;
+    padding-left:400px;
+    width: 100px;
+    margin-top: 100px;
+    margin-bottom: 10px;
 }
