--- a/HHManager/src/main/webapp/CSS/logginn.css
+++ b/HHManager/src/main/webapp/CSS/logginn.css
@@ -1,20 +1,11 @@
-#halvesiden {
+#settestørrelse {
     display: flex;
     flex-direction: column;
-    padding-left:400px;
+    padding-left: 400px;
     width: 100px;
     margin-top: 100px;
     margin-bottom: 10px;
 }
-#bestille{
-    width: 150px;
-    margin-top: 10px;
-}
-#siden{
-    display: flex;
-    flex-direction: column;
-    padding-left:400px;
-    width: 100px;
+.container{
     margin-top: 100px;
-    margin-bottom: 10px;
 }
