--- a/HHManager/src/main/webapp/CSS/forside.css
+++ b/HHManager/src/main/webapp/CSS/forside.css
@@ -1,8 +1,8 @@
 .navigation-bar {
     width: 100%;  /* i'm assuming full width */
     height: 80px; /* change it to desired width */
-    background-color: red; /* change to desired color */
 }
+
 .logo {
     /*display: inline-block;*/
     float: right;
@@ -19,4 +19,20 @@
     margin-right: 20px;
     height: 80px; /* if you want it to take the full height of the bar */
     line-height: 80px; /* if you want it vertically middle of the navbar */
+}
+
+.container{
+    width: 400px;
+    height: 400px;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 70px;
+}
+
+.form-group{
+    width: 400px;
+    height: 250px;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 70px;
 }
