--- a/HHManager/src/main/webapp/CSS/forside.css
+++ b/HHManager/src/main/webapp/CSS/forside.css
@@ -24,15 +24,30 @@
 .container{
     width: 400px;
     height: 400px;
-    margin-right: 100px;
-    margin-left: 100px;
-    margin-top: 70px;
+    margin-right: 120px;
+    margin-left: 120px;
+    margin-top: 30px;
 }
 
 .form-group{
     width: 400px;
     height: 250px;
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: 120px;
+    margin-left: 120px;
     margin-top: 70px;
 }
+
+.container-chekcbox{
+    width: 200px;
+    height: 200px;
+    margin-right: 200px;
+    margin-left: 100px;
+    margin-top: 52px;
+}
+
+
+
+.glyphicon-plus-sign{
+    font-size: 25px;
+}
+
