--- a/HHManager/src/main/webapp/CSS/statistikk.css
+++ b/HHManager/src/main/webapp/CSS/statistikk.css
@@ -1,29 +1,3 @@
 .vl{
-    border-left: 1px solid #DDD;
-}
-.navigation-bar {
-    width: 100%;  /* i'm assuming full width */
-    height: 80px; /* change it to desired width */
-}
-
-.logo {
-    /*display: inline-block;*/
-    float: right;
-    vertical-align: top;
-    width: 99px;
-    height: 43px;
-    margin-right: 5px;
-    margin-top: 5px; /* if you want it vertically middle of the navbar. */
-}
-
-.navigation-bar > a {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 20px;
-    height: 80px; /* if you want it to take the full height of the bar */
-    line-height: 80px; /* if you want it vertically middle of the navbar */
-}
-#navbar{
-    display: inline-flex;
-    padding: 0px;
+    border-right: 1px solid #DDD;
 }
