--- a/HHManager/src/main/webapp/CSS/statistikk.css
+++ b/HHManager/src/main/webapp/CSS/statistikk.css
@@ -8,6 +8,8 @@ border-bottom: 1px solid #DDD;
     width: 600px;
     height: 400px;
     margin-top: 30px;
+    margin-right: 200px;
+    margin-left: 100px;
 }
 
 /* Hentet fra https://bootsnipp.com/snippets/84D3 */
